# pg-kazsearch

./: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: explore.rs  lib.rs  rules.rs  script.rs  text.rs
core/tests/: latin_stem_tests.rs  parity_test.rs  stem_tests.rs
data/tsearch_data/: kaz_stems.dict  kaz_stems.dict.meta.json
elastic/: Cargo.toml  README.md  install.sh
elastic/docker/: Dockerfile  docker-compose.yml
elastic/java/: build.gradle
elastic/java/src/main/java/io/github/darkhanakh/kazsearch/: KazakhStemPlugin.java  KazakhStemTokenFilterFactory.java  KazakhStemmerNative.java  NativeLibraryLoader.java
elastic/java/src/main/plugin-metadata/: entitlement-policy.yaml  plugin-security.policy
elastic/java/src/test/java/io/github/darkhanakh/kazsearch/: KazakhStemTokenFilterTest.java  KazakhStemmerNativeTest.java
elastic/src/: lib.rs
eval/: build_gold_pool.py  gold_pool.jsonl  gold_queries_v2.jsonl  gold_queries_v2.meta.json  gold_queries_v2_seed.jsonl  measure_stem_coverage.py  optimize_weights.py  run_eval.py  run_eval_es.py  validate_gold.py
pg_ext/: Cargo.toml
pg_ext/sql/: pg_kazsearch--0.1.0--2.2.0.sql
pg_ext/src/: lib.rs
scripts/: build_lexicon.py  gen_readme_charts.py
